[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "padding_oracle"
version = "0.4.1"
authors = [
  { name="Yuankui Li", email="toregnerate@gmail.com" },
]
description = "Threaded padding oracle automation."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Topic :: Security :: Cryptography',
]

[project.urls]
"Homepage" = "https://github.com/djosix/padding_oracle.py"
"Bug Tracker" = "https://github.com/djosix/padding_oracle.py/issues"
